--- a/smart_news/notebooks/1_test_api_connection.ipynb
+++ b/smart_news/notebooks/1_test_api_connection.ipynb
@@ -15,7 +15,7 @@
     "import requests\n",
     "\n",
     "# The base URL for the NewsData.io API\n",
-    "URL = f'https://newsdata.io/api/1/news?apikey={NEWS_API_KEY}&q=Tesla'\n",
+    "URL = f'https://newsdata.io/api/1/news?apikey={NEWS_API_KEY}&q=Tesla&language=en'\n",
     "\n",
     "# Make the request\n",
     "response = requests.get(URL)\n",
